--- a/html/styles.css
+++ b/html/styles.css
@@ -2,3 +2,34 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+main {
+  display: grid;
+  grid-auto-flow: row;
+  gap: 1rem;
+}
+
+h2 {
+  font-size: 1rem;
+  margin: 0;
+  margin-bottom: 0.5rem;
+}
+
+main > div {
+  padding: 1rem;
+  background: whitesmoke;
+}
+
+main > div > div {
+  display: flex;
+  flex-flow: row;
+  align-items: baseline;
+  gap: 0.5rem;
+}
+
+input {
+  font-size: 1rem;
+  border: 1.5px solid gray;
+  border-radius: 0.3ch;
+  width: 12ch;
+}
